<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddangnhap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBackgroundDangNhap"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/foodytext" />

        <EditText
            android:id="@+id/edEmailDangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <EditText
            android:id="@+id/edPasswordDangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/matkhau"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:drawableLeft="@drawable/ic_exit_to_app_white_24dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimaryDark"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/dangnhap"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/hoac"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorAccent" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:drawableLeft="@drawable/icon_google"
            android:drawablePadding="5dp"
            android:text="@string/dangnhapgoogle"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"/>

        <com.facebook.login.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            app:com_facebook_login_text="@string/dangnhapfacebook"/>
    </LinearLayout>
</RelativeLayout>